# auth_server_rust

./: .gitignore  Cargo.toml  Dockerfile.ubuntu20.04  Makefile  README.md
.github/workflows/: rust.yml
auth_server_admin/: Cargo.toml
auth_server_admin/src/: lib.rs
auth_server_ext/: Cargo.toml
auth_server_ext/src/: auth_server_admin.rs  errors.rs  google_openid.rs  invitation.rs  lib.rs  ses_client.rs
auth_server_http/: Cargo.toml
auth_server_http/src/: app.rs  auth.rs  content_type_trait.rs  datetime_wrapper.rs  elements.rs  errors.rs  html_response.rs  json_response.rs  lib.rs  logged_user.rs  response_description_trait.rs  routes.rs  session_data_cache.rs  status_code_trait.rs  uuid_wrapper.rs
auth_server_lib/: Cargo.toml
auth_server_lib/src/: auth.rs  auth_server_admin.rs  auth_user_config.rs  authorized_users.rs  claim.rs  config.rs  date_time_wrapper.rs  errors.rs  google_openid.rs  invitation.rs  lib.rs  pgpool.rs  ses_client.rs  session.rs  session_data.rs  static_files.rs  token.rs  toml_entry.rs  user.rs
authorized_users/: Cargo.toml
authorized_users/src/: authorized_user.rs  claim.rs  errors.rs  lib.rs  token.rs
migrations/: V10__users_deleted_at.sql  V11__session_key_hash.sql  V12__session_additions.sql  V1__invitations.sql  V3__add_invitations_created_at.sql  V4__add_users_created_at_default.sql  V5__sessions.sql  V6__sessions_last_accessed.sql  V7__users_password_text.sql  V8__session_secret.sql  V9__session_values.sql
scripts/: Dockerfile  bootstrap_db.sh  bootstrap_docker.sh  bootstrap_github.sh  build_deb_docker.sh  openapi.yaml  users.sql
src/: app.rs  auth.rs  auth_server_admin.rs  auth_user_config.rs  claim.rs  config.rs  email_service.rs  errors.rs  google_openid.rs  invitation.rs  lib.rs  logged_user.rs  main.rs  pgpool.rs  routes.rs  ses_client.rs  stack_string.rs  static_files.rs  stdout_channel.rs  token.rs  user.rs
templates/: change_password.html  index.html  login.html  main.js  register.html
tests/data/: test_config.toml
