[package]
name = "auth_server_rust"
version = "0.7.18"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "auth-server-rust"
priority = "optional"
section = "rust"
provides = "auth-server-rust"
extended-description = """\
Authentication service using warp."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "auth_server_http",
    "auth_server_lib",
    "auth_server_ext",
    "authorized_users",
]

[dependencies]
auth_server_admin = {path="auth_server_admin"}
auth_server_http = {path = "auth_server_http"}
auth_server_lib = {path = "auth_server_lib"}
auth_server_ext = {path = "auth_server_ext"}
authorized_users = {path = "authorized_users"}
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = {version="1.6", features=["full"]}
thiserror = "1.0"
dirs = "4.0"
dotenv = "0.15"
derive_more = "0.99"
lazy_static = "1.4"
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
deadqueue = "0.2"
bytes = "1.0"
envy = "0.4"
base64 = "0.13"
rand = "0.8"
url = "2.2"
futures = "0.3"
parking_lot = "0.11"
smallvec = "1.6"
crossbeam = "0.8"
structopt = "0.3"
env_logger = "0.9"
arc-swap = "1.2"
im = "15.0"
toml = "0.5"
itertools = "0.10"
stack-string = { version="0.4", features=["postgres_types"] }
stdout-channel = "0.4"

[dev-dependencies]
reqwest = {version = "0.11", default_features = false, features=["cookies", "rustls-tls", "gzip", "json"]}

[[bin]]
name = "auth-server-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "auth-server-admin"
path = "src/auth_server_admin.rs"
doc = false
