[package]
name = "auth_server_rust"
version = "0.10.7"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "auth-server-rust"
priority = "optional"
section = "rust"
provides = "auth-server-rust"
extended-description = """\
Authentication service using warp."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "auth_server_http",
    "auth_server_lib",
    "auth_server_ext",
    "authorized_users",
]

[dependencies]
auth_server_admin = {path="auth_server_admin"}
auth_server_http = {path = "auth_server_http"}
auth_server_lib = {path = "auth_server_lib"}
auth_server_ext = {path = "auth_server_ext"}
authorized_users = {path = "authorized_users"}
anyhow = "1.0"
log = "0.4"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = {version="1.26", features=["full"]}
thiserror = "1.0"
dirs = "5.0"
dotenv = "0.15"
derive_more = "0.99"
lazy_static = "1.4"
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
deadqueue = "0.2"
bytes = "1.1"
envy = "0.4"
rand = "0.8"
url = "2.3"
futures = "0.3"
parking_lot = "0.12"
smallvec = "1.8"
crossbeam = "0.8"
clap = {version="4.0", features=["derive"]}
env_logger = "0.10"
arc-swap = "1.5"
toml = "0.7"
itertools = "0.10"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"] }
stdout-channel = "0.6"

[dev-dependencies]
reqwest = {version = "0.11", default_features = false, features=["cookies", "rustls-tls", "gzip", "json"]}

[[bin]]
name = "auth-server-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "auth-server-admin"
path = "src/auth_server_admin.rs"
doc = false
