[package]
name = "auth_server_rust"
version = "0.11.13"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "auth-server-rust"
priority = "optional"
section = "rust"
provides = "auth-server-rust"
extended-description = """\
Authentication service using warp."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "auth_server_http",
    "auth_server_lib",
    "auth_server_ext",
    "authorized_users",
]

[dependencies]
auth_server_admin = {path="auth_server_admin"}
auth_server_ext = {path="auth_server_ext"}
auth_server_http = {path = "auth_server_http"}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default_features = false}
tokio = {version="1.37", features=["rt", "macros", "rt-multi-thread"]}

[[bin]]
name = "auth-server-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "auth-server-admin"
path = "src/auth_server_admin.rs"
doc = false
