[package]
name = "auth_server_admin"
version = "0.12.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7"
auth_server_lib = {path = "../auth_server_lib"}
authorized_users = {path = "../authorized_users"}
auth_server_ext = {path = "../auth_server_ext"}
aws-config = {version="1.5", features=["behavior-version-latest"]}
bytes = "1.10"
clap = {version="4.5", features=["derive"]}
crossbeam = "0.8"
deadqueue = "0.2"
derive_more = {version="2.0", features=["full"]}
dirs = "6.0"
envy = "0.4"
futures = "0.3"
itertools = "0.14"
log = "0.4"
parking_lot = "0.12"
rand = "0.9"
refinery = {version="0.8", features=["tokio-postgres"]}
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
smallvec = "1.14"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.1.2" }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.5"
uuid = { version = "1.13", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
