[package]
name = "auth_server_ext"
version = "0.12.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
auth_server_lib = {path = "../auth_server_lib"}
authorized_users = {path = "../authorized_users"}
aws-config = {version="1.1", features=["behavior-version-latest"]}
aws-sdk-ses = "1.13"
aws-smithy-types = "1.1"
base64 = "0.22"
bytes = "1.8"
crossbeam = "0.8"
derive_more = {version="1.0", features=["full"]}
dirs = "5.0"
envy = "0.4"
futures = "0.3"
log = "0.4"
openid = {version="0.15", default-features=false}
parking_lot = "0.12"
rand = "0.8"
refinery = {version="0.8", features=["tokio-postgres"]}
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
smallvec = "1.8"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
tokio = {version="1.41", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.3"

[dev-dependencies]
reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
