[package]
name = "auth_server_http"
version = "0.12.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth_server_ext = {path = "../auth_server_ext"}
auth_server_lib = {path="../auth_server_lib"}
authorized_users = {path = "../authorized_users"}
arc-swap = "1.5"
aws-config = {version="1.1", features=["behavior-version-latest"]}
cookie = {version="0.18", features=["percent-encode"]}
derive_more = {version="2.0", features=["full"]}
dioxus-core = "0.6"
dioxus-ssr = "0.6"
dioxus = "0.6"
futures = "0.3"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
rand = "0.9"
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = {git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3"}
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
serde_yml = "0.0.12"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
tokio = {version="1.42", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
warp = "0.3"

[dev-dependencies]
anyhow = "1.0"
reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
maplit = "1.0"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
