[package]
name = "auth_server_http"
version = "0.13.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7"
auth_server_ext = {path = "../auth_server_ext"}
auth_server_lib = {path="../auth_server_lib"}
authorized_users = {path = "../authorized_users"}
axum = { version = "0.8", features = ["multipart"] }
axum-extra = {version="0.10", features=["cookie"]}
aws-config = {version="1.6", features=["behavior-version-latest"]}
bytes = "1.10"
cookie = {version="0.18", features=["percent-encode"]}
derive_more = {version="2.0", features=["full"]}
dioxus-core = "0.6"
dioxus-ssr = "0.6"
dioxus = "0.6"
futures = "0.3"
log = "0.4"
maplit = "1.0"
mime = "0.3"
parking_lot = "0.12"
rand = "0.9"
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
serde_yml = "0.0.12"
stack-string = { version="1.1", features=["postgres_types", "utoipa_types", "axum_types"] }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
tokio = {version="1.46", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.9"
tower = "0.5"
tower-http = {version="0.6", features=["cors"]}
url = "2.5"
utoipa = { version = "5.3", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
uuid = { version = "1.16", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0"
reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
maplit = "1.0"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
