[package]
name = "auth_server_lib"
version = "0.11.9"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
argon2 = {version="0.5", features=["std"]}
authorized_users = {path = "../authorized_users"}
bytes = "1.1"
crossbeam = "0.8"
deadpool = { version = "0.10", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.12", features=["serde"] }
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
log = "0.4"
once_cell = "1.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.6", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.8"
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
serde_yaml = "0.9"
smallvec = "1.8"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.2" }
stdout-channel = "0.6"
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.35", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
toml = "0.8"
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.3"
