[package]
name = "auth_server_lib"
version = "0.13.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.9"
argon2 = {version="0.5", features=["std"]}
authorized_users = {path = "../authorized_users"}
bytes = "1.11"
checksums = "0.9"
crossbeam = "0.8"
deadpool = { version = "0.13", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.14", features=["serde"] }
derive_more = {version="2.1", features=["full"]}
dirs = "6.0"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.10"
serde = { version="1.0", features=["derive"] }
serde_json="1.0"
serde_yaml_ng = "0.10"
smallvec = "1.15"
stack-string = { version="1.1", features=["postgres_types"] }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.52", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
toml = "1.1"
uuid = { version = "1.23", features = ["serde", "v4"] }
url = {version="2.5", features=["serde"]}

[dev-dependencies]
anyhow = "1.0"