[package]
name = "authorized_users"
version = "0.13.12"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.9"
base64 = "0.22"
biscuit = "0.8"
bytes = "1.11"
crossbeam = "0.8"
derive_more = {version="2.1", features=["full"]}
log = "0.4"
rand = "0.10"
reqwest = {version="0.13", features=["cookies", "json", "stream"]}
serde = { version="1.0", features=["derive"] }
smallvec = "1.15"
stack-string = { version="1.1", features=["postgres_types"] }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.52", features=["rt", "macros", "rt-multi-thread"]}
url = "2.5"
uuid = { version = "1.23", features = ["serde", "v4"] }
